DBC22-1784: Fix for Filters overlay overlap with nav header

--- a/src/frontend/src/Components/shared/Filters.scss
+++ b/src/frontend/src/Components/shared/Filters.scss
@@ -17,7 +17,7 @@ button.btn.open-filters {
   bottom: 0;
   left: 0;
   width: 100%;
-  max-height: calc(100% - 32px);
+  max-height: calc(100% - 58px);
   border-radius: 4px;
   background-color: white;
   box-shadow: 0px 1.937px 4.358px 0px rgba(0, 0, 0, 0.13), 0px 0.363px 1.089px 0px rgba(0, 0, 0, 0.10);
